# mini-nu

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
background/: Cargo.toml  README.md
background/src/: main.rs
background/tests/: background_test.rs
basic/: Cargo.toml  README.md
basic/src/: main.rs
basic/tests/: basic_test.rs
p1-basic/: Cargo.toml  README.md
p1-basic/src/: main.rs
p1-basic/tests/: test.rs
p2-background/: Cargo.toml  README.md
p2-background/src/: main.rs
p2-background/tests/: test.rs
p3-the-works/: Cargo.toml  README.md
p3-the-works/src/: main.rs
p3-the-works/tests/: test.rs
p4-sandbox/: Cargo.toml  README.md
p4-sandbox/src/: main.rs
p4-sandbox/tests/: test.rs
scripts/: check.sh
src/: engine.rs  main.rs  thread_pool.rs
threaded/: Cargo.toml  README.md
threaded/src/: engine.rs  main.rs  run.rs  thread_pool.rs
threaded/tests/: threaded_test.rs
