[workspace]
members = [
    "basic",
    "threaded",
]
resolver = "2"

[workspace.dependencies]
nu-cli = "0.104"
nu-command = "0.104"
nu-protocol = "0.104"
nu-cmd-lang = "0.104"
nu-engine = "0.104"
nu-parser = "0.104"

# Testing dependencies shared across packages
assert_cmd = "2.0"
predicates = "3.0"