[workspace]
members = [
    "p1-basic",
    "p2-background",
    "p3-the-works",
    "p4-sandbox",
]
resolver = "2"

[workspace.dependencies]
nu-cli = { git = "https://github.com/sholderbach/nushell", branch = "engine-cleaning" }
nu-command = { git = "https://github.com/sholderbach/nushell", branch = "engine-cleaning" }
nu-protocol = { git = "https://github.com/sholderbach/nushell", branch = "engine-cleaning" }
nu-cmd-lang = { git = "https://github.com/sholderbach/nushell", branch = "engine-cleaning" }
nu-engine = { git = "https://github.com/sholderbach/nushell", branch = "engine-cleaning" }
nu-parser = { git = "https://github.com/sholderbach/nushell", branch = "engine-cleaning" }

# Testing dependencies shared across packages
assert_cmd = "2.0"
predicates = "3.0"
